--- a/JWTAndSpringSecurity/rest-springboot/pom.xml
+++ b/JWTAndSpringSecurity/rest-springboot/pom.xml
@@ -100,6 +100,11 @@
 		    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 		    <version>${springdoc.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
