--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ blog/bin/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# gitignore templates - https://github.com/github/gitignore
