Person CRUD using the verbs GET, POST, PUT and DELETE

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,16 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		
+		<dependency> <!-- for DB-JPA connection-->
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		
+		<dependency> <!-- MySQL-->
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+		</dependency>
 
 		<dependency> <!--Inicial project Dependency -->
 			<groupId>org.springframework.boot</groupId>
@@ -33,6 +43,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
 	</dependencies>
 
 	<build>
