--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     password: admin123
   jpa:
     hibernate:
-      ddl-auto: update #for more: https://stackoverflow.com/questions/438146/what-are-the-possible-values-of-the-hibernate-hbm2ddl-auto-configuration-and-wha
+      ddl-auto: none #for more: https://stackoverflow.com/questions/438146/what-are-the-possible-values-of-the-hibernate-hbm2ddl-auto-configuration-and-wha
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
