--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 	<properties>
 		<java.version>20</java.version>
 		<dozer.version>6.4.0</dozer.version>
+		<springdoc.version>2.0.2</springdoc.version>
 	</properties>
 	<dependencies>
 		<dependency> <!--Inicial project Dependency -->
@@ -73,6 +74,13 @@
 		<dependency> <!-- HATEOAS for more: https://docs.spring.io/spring-hateoas/docs/current/reference/html/-->
 			<groupId>org.springframework.hateoas</groupId>
 			<artifactId>spring-hateoas</artifactId>
+		</dependency>
+		
+		<dependency> <!-- Swagger http://localhost:8080/v3/api-docs & http://localhost:8080/swagger-ui.html-->
+			<!-- for more: https://lankydan.dev/documenting-a-spring-rest-api-following-the-openapi-specification-->
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>${springdoc.version}</version>
 		</dependency>
 		
 	</dependencies>
