--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 #Changed the file type to .yml  for new technologies
 cors: #Global CORS
   originPatterns: http://localhost:3000,http://localhost:8080,https://afos.com.br
+security:
+  jwt:
+    token:
+      secret-key: 53cr37
+      expire-lenght: 3600000
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -15,6 +20,8 @@ spring:
         dialect: org.hibernate.dialect.MySQL8Dialect
     show-sql: false
 springdoc:
-  pathsToMatch: /**/v1 #/api/**/v1/**
+  pathsToMatch: 
+    - /**/v1 #/api/**/v1/**
+    - /auth/**
   swagger-ui:
     use-root-path: true
