--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 #Changed the file type to .yml  for new technologies
 cors: #Global CORS
   originPatterns: http://localhost:3000,http://localhost:8080,https://afos.com.br
+file:
+  upload-dir: C:/springboot-rest-dir
 security:
   jwt:
     token:
@@ -19,6 +21,12 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
     show-sql: false
+  servlet:
+    multipart:
+      enabled: true
+      file-size-threshold: 2KB
+      max-file-size: 200MB
+      max-request-size: 215MB
 springdoc:
   pathsToMatch: 
     - /**/v1 #/api/**/v1/**
