--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,5 @@
 #Changed the file type to .yml  for new technologies
+#Use yamllint.com to validate the code yaml
 server:
   port: 80
 cors: #Global CORS
@@ -14,7 +15,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/db_rest_springboot?useTimezone=true&serverTimezone=UTC
-    username: root
+    username: root #username for aws application
     password: admin123
   jpa:
     hibernate:
