--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/db_rest_springboot?useTimezone=true&serverTimezone=UTC
-    username: root #username for aws application
+    #see more about app location on docker-compose.yml if needs set to other app location
+    username: root 
     password: admin123
   jpa:
     hibernate:
