--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 #Changed the file type to .yml  for new technologies
 #Use yamllint.com to validate the code yaml
 server:
-  port: 80
+  port: 8080
 cors: #Global CORS
   originPatterns: http://localhost:3000,http://localhost:8080,https://afos.com.br
 file:
@@ -14,7 +14,7 @@ security:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/db_rest_springboot?useTimezone=true&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3308/db_rest_springboot?useTimezone=true&serverTimezone=UTC
     username: root #username for aws application
     password: admin123
   jpa:
@@ -32,8 +32,8 @@ spring:
       max-request-size: 215MB
 springdoc:
   pathsToMatch: 
-    - /**/v1 #/api/**/v1/**
+    - /**/v1/**/ #/api/**/v1/**
     - /auth/**
-    - /file/**
+    - /**/file/**
   swagger-ui:
     use-root-path: true
